--- a/sophia/templates/bio.html
+++ b/sophia/templates/bio.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Biography | 
+Biography | Sophia Hsiao Studio
+{% endblock %}
+
+{% block meta %}
+  <meta name="description" content="Biography of Sophia Hsiao and her violin performing and violin teaching experience.">
 {% endblock %}
 
 {% block content %}
@@ -32,21 +36,15 @@ Biography |
               <h2>SOPHIA HSIAO</h2>
               <span>Owner, Instructor</span>
             </div>
-            <ul class="social-icons pull-right">
-              <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="#"></a></li>
-              <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="#"></a></li>
-            </ul>
           </div>
-          <p>I graduated in 2009 with a Bachelor of Music degree in Violin Performance from the University of Illinois at Urbana-Champaign. Upon graduation, I pursued missions work with a college ministry called InterVarsity Christian Fellowship where I mentored students who were studying music, art, theater, and film. My passion for students to pursue music began to fuel my desire to become a teacher so that I could equip the next generation of student musicians. </p>
-
-          <hr>
-
-          <p>In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home. In addition to teaching privately, I have been a violin instructor at the Des Plaines School of Music since 2014.</p>
-
-          <hr>
-
-          <p>I have performed in a variety of settings including orchestral and chamber ensembles, weddings and engagement parties, and church events and conferences. My husband and I enjoy playing together as a violin and guitar duo for special events. Some of my favorite activities include spending time with my husband on house projects, trying new restaurants with friends and family, and browsing Pinterest for new craft and recipe ideas.</p>
-          <hr>
+          <p>I graduated from the University of Illinois at Urbana-Champaign and studied with Simin Ganatra of the Pacifica Quartet. Other musical influences include Jeri-Lou Zike, members of the Pacifica Quartet, and Joan Kwuon during my time at the Bowdoin International Music Festival. I have performed in a variety of settings including orchestral and chamber ensembles, weddings and engagement parties, and church events and conferences. My husband and I enjoy playing together for weddings and special occasions as a violin and guitar duo. In 2012, I played on the Worship Team for the Urbana Student Missions Conference in St. Louis where 18,000 people were in attendance. 
+          </p>
+          <br>
+          <p>From 2009-2014, I pursued missions work with a college ministry called InterVarsity Christian Fellowship where I mentored students who were studying art, music, theater, and film. My passion for students to pursue music with excellence began to fuel my desire to become a teacher so that I could equip the next generation of student musicians.</p>
+          <br>
+          <p>In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home minutes way from Mount Prospect, Elk Grove Village, and Schaumburg. In addition to teaching privately, I have been a violin instructor at the Des Plaines School of Music since 2014.</p>
+          <br>
+          <p>In my spare time, some of my favorite activities include spending time with my husband on house projects, trying new restaurants with friends and family, and browsing Pinterest for new craft and recipe ideas.</p>
         </div>
       </div>
     </div>
