--- a/sophia/templates/bio.html
+++ b/sophia/templates/bio.html
@@ -42,7 +42,9 @@ Biography | Sophia Hsiao Studio
           <br>
           <p>From 2009-2014, I worked for InterVarsity Christian Fellowship where I mentored college students who were majoring in music, art, theater, and film. I loved my time working with music students and journeying with them in their artistic pursuits. This began to fuel my desire to teach so that I could equip the next generation of student musicians.</p>
           <br>
-          <p>In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home minutes way from Mount Prospect, Elk Grove Village, and Schaumburg. In addition to teaching privately, I have been a violin instructor at the Des Plaines School of Music since 2014.</p>
+          <p>
+          In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home minutes way from Mount Prospect, Elk Grove Village, and Schaumburg. In addition to teaching privately, I have been a violin instructor at the Des Plaines School of Music since 2014 and at Christian Liberty Academy since 2016.
+          </p>
           <br>
           <p>In my spare time, some of my favorite activities include spending time with my husband on house projects, trying new restaurants with friends and family, and browsing Pinterest for new craft and recipe ideas.</p>
         </div>
