--- a/sophia/templates/bio.html
+++ b/sophia/templates/bio.html
@@ -37,16 +37,16 @@ Biography | Sophia Hsiao Studio
               <span>Owner, Instructor</span>
             </div>
           </div>
-          <p>I graduated from the University of Illinois at Urbana-Champaign and studied with Simin Ganatra of the Pacifica Quartet. Other musical influences include Jeri-Lou Zike, members of the Pacifica Quartet, and Joan Kwuon during my time at the Bowdoin International Music Festival. I have performed in a variety of settings including orchestral and chamber ensembles, weddings and engagement parties, and church events and conferences. My husband and I enjoy playing together for weddings as a violin and guitar duo. In 2012, I played on the Worship Team for the Urbana Student Missions Conference in St. Louis where 18,000 people were in attendance. 
+          <p>I graduated from the University of Illinois at Urbana-Champaign and studied with Simin Ganatra of the Pacifica Quartet. Other musical influences include Jeri-Lou Zike and Joan Kwuon during my time at the Bowdoin International Music Festival. I have performed in a variety of settings including orchestral and chamber ensembles, weddings and engagement parties, and church events and conferences. My husband and I enjoy playing together for weddings as a violin and guitar duo. In 2012, I played on the Worship Team for the Urbana Student Missions Conference in St. Louis where 18,000 people were in attendance. 
           </p>
           <br>
           <p>From 2009-2014, I worked for InterVarsity Christian Fellowship where I mentored college students who were majoring in music, art, theater, and film. I loved my time working with music students and journeying with them in their artistic pursuits. This began to fuel my desire to teach so that I could equip the next generation of student musicians.</p>
           <br>
           <p>
-          In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home minutes way from Mount Prospect, Elk Grove Village, and Schaumburg. I was a violin instructor at the Des Plaines School of Music from 2014-2017. I have been teaching private lessons at Christian Liberty Academy since 2016 and joined the Fox Valley Orchestra in 2017. I am a member of the Music Teachers National Association (MTNA) and the Northwest Suburban Music Teachers Association (NWSMTA).
+          In 2013, I began my private violin studio in Glenview then relocated to Arlington Heights in 2015 where I currently teach in my home minutes way from Mount Prospect, Elk Grove Village, and Schaumburg.  I was a violin instructor at the Des Plaines School of Music from 2014-2017 where I taught over 40 students. I taught at Christian Liberty Academy from 2016-2018 and have been a member of the Fox Valley Orchestra since 2017. I am a member of the Music Teachers National Association (MTNA) and the Northwest Suburban Music Teachers Association (NWSMTA).
           </p>
           <br>
-          <p>In my spare time, some of my favorite activities include spending time with my husband on house projects, browsing Pinterest for new craft and recipe ideas, baking desserts, and eating good food with family and friends.</p>
+          <p>In my spare time, some of my favorite activities include spending time with my husband on house projects, baking desserts, browsing Pinterest for new recipe ideas, and biking.</p>
         </div>
       </div>
     </div>
